[package]
name = "http-client-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
http = "1.4.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
http-client-if = { git = "https://github.com/cuhey3/my-if.git" }
